<resources>
    <string name="app_name">PartesExit</string>
    <string name="login_activity_cb_gardar_usuario">Recordar esta cuenta</string>
    <string name="login_activity_rotulo">Inicia sesión</string>
    <string name="ad_seleccion_empresa_rotulo">Escoje una empresa por defecto</string>
    <string name="navigation_parte_a_titulo">Abiertos</string>
    <string name="navigation_parte_p_titulo">Pendientes</string>
    <string name="navigation_parte_c_titulo">Cerrados</string>
    <string name="navigation_parte_ultimos_titulo">Cronológico</string>
    <string name="mi_buscar">Buscar</string>
    <string name="mi_borrar">Borrar</string>
    <string name="mi_anadir">Añadir</string>
    <string name="mi_usuario">Mi cuenta</string>
    <string name="detalles_activity_proyecto_rotulo">Proyecto</string>
    <string name="detalles_activity_s_p_asociado">Sin proyecto asociado</string>
    <string name="detalles_activity_c_recepcion_hint">Comentario de recepción</string>
    <string name="detalles_activity_c_cierre_hint">Comentario de cierre</string>
    <string name="mi_lineas">Líneas</string>
    <string name="detalles_activity_c_recepcion_rotulo">Comentario de recepción</string>
    <string name="detalles_activity_c_cierre_rotulo">Comentario de cierre</string>
    <string name="pendiente">Pendiente</string>
    <string name="abierto">Abierto</string>
    <string name="cerrado">Cerrado</string>
    <string name="detalles_activity_importe_rotulo">Importe:</string>
    <string name="detalles_activity_gastos_rotulo">Gastos:</string>
    <string name="detalles_activity_facturable_rotulo">Facturable</string>
    <string name="mi_guardar">Guardar</string>
    <string name="mi_descartar">Descartar</string>
    <string name="item_parte_lineas_facturable_rotulo">Facturable:</string>
    <string name="item_parte_lineas_gastos_rotulo">Gastos:</string>
    <string name="item_parte_lineas_unidades_rotulo">Unidades:</string>
    <string name="item_parte_lineas_precio_rotulo">Precio:</string>
    <string name="item_parte_lineas_importe_rotulo">Importe:</string>
    <string name="ad_parte_lineas_descripcion">Descripción de la línea</string>
    <string name="ad_nuevo_parte_hint_cif_dni_cliente">CIF/DNI...</string>
    <string name="ad_nuevo_parte_rotulo">Nuevo parte...</string>
    <string name="edicion_pl_activity_codigo_articulo_rotulo">Código artículo:</string>
    <string name="edicion_pl_activity_etcodigoarticulo_hint">código artículo...</string>
    <string name="edicion_pl_activity_descripcion_articulo_rotulo">Descripción:</string>
    <string name="edicion_pl_activity_cb_gastos_rotulo">Gastos</string>
    <string name="edicion_pl_activity_cb_facturable_rotulo">Facturable</string>
    <string name="edicion_plactivity_etunidades_rotulo">Unidades:</string>
    <string name="mi_sinc">Sincronizar</string>
    <string name="mi_usrsub_cerrar_sesion">Cerrar sesión</string>
    <string name="mi_usrsub_cambiar_empresa">Cambiar empresa</string>
    <string name="ad_parte_lineas_confirmar_borrado_desc">¿Desea borrar %1$d línea%2$s?</string>
    <string name="ad_parte_lineas_seleccion_solo_una">Sólo puede seleccionar una linea para editar.</string>
    <string name="ad_parte_lineas_seleccion_una">Debe seleccionar una línea para editar</string>
    <string name="toast_parte_lineas_codigo_no_encontrado">Código no encontrado</string>
    <string name="toast_parte_lineas_descripcion_guardada">Descripción guardada</string>
    <string name="ad_nuevo_parte_hint_nombre_cliente">Nombre...</string>
    <string name="ad_nuevo_parte_buscar_por_rotulo">Buscar por</string>
    <string name="ad_parte_cabeceras_confirmar_borrado">¿Desea borrar %1$d parte%2$s?</string>
    <string name="toast_parte_lineas_articulo_no_encontrado">Artículo no encontrado</string>
    <string name="ad_detalles_parte_guardar_msg">¿Guardar nuevo parte?</string>
    <string name="ad_detalles_parte_borrar_msg">¿Desea borrar este parte?</string>
</resources>
