<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParteLineasActivity">

    <ListView
        android:id="@+id/lvParteLineasActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/llParteLineasDatos"/>

    <LinearLayout
        android:id="@+id/llParteLineasDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/detalles_activity_importe_rotulo"/>
        <TextView android:id="@+id/tvParteLineasImporte"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            tools:text="100"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/detalles_activity_gastos_rotulo"/>
        <TextView android:id="@+id/tvParteLineasGastos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            tools:text="100"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/detalles_activity_facturable_rotulo" />
        <TextView android:id="@+id/tvParteLineasFacturable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="100"/>
    </LinearLayout>

</RelativeLayout>